--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ clap = { version = "4.5.53", features = ["derive"] }
 env_logger = "0.11.8"
 itertools = "0.14.0"
 log = "0.4.28"
+pathfinding = "4.14.0"
 rayon = "1.11.0"
 z3 = "0.19.5"
